rascunho teste js

--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
 
   <!-- JQuery e Ouibounce -->
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/ouibounce/0.0.12/ouibounce.js"
-    integrity="sha512-jBbXdclmLsEjHr6brYhQEf22JqtYDPyUV4gl8AJ9u5HL1burqhMFD4x1gt3HF4alYm6uq5ujYFDTQ78743lyZw=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="ouibounce.js"></script>
 </head>
 
 <body>
